Fix stretched cards bunching up in Safari

--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -31,6 +31,7 @@
 	.o-teaser__content {
 		display: flex;
 		flex-direction: column;
+		flex: 1;
 		height: 100%;
 	}
 
